--- a/css/arquitectura.css
+++ b/css/arquitectura.css
@@ -43,7 +43,7 @@
 .hero {
     position: relative;
     height: 100vh;
-    background-image: url("../assets/img/hero-arquitectura.jpg");
+    background-image: url("../assets/img/melamina-2.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
